kubernetes/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: tempconverter

spec:
  selector:
    app: tempconverter

  ports:
  - port: 80
    targetPort: 5000

  type: ClusterIP
